src/objects/ffbf__PaymentMediaSummaryTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__AccountBankAccountNumber__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankSortCode__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankSortCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBillingAddress__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BillingStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBillingState__c</fullName>
        <formula>ffbf__BankStateProvince__c &amp; ffbf__BillingZipPostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountFax__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountInvoiceEmail__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__InvoiceEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Invoice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountName__c</fullName>
        <formula>ffbf__AccountTest__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__AccountParticulars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Particulars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>ffbf__AccountTest__c</referenceTo>
        <relationshipLabel>Payment Media Summary Tests (Account Test)</relationshipLabel>
        <relationshipName>PaymentMediaSummaryTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated: Account</label>
        <referenceTo>ffbf__AccountTest__c</referenceTo>
        <relationshipLabel>Payment Media Summary Tests</relationshipLabel>
        <relationshipName>Payment_Media_Summary_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__BankAccountNumber__c</fullName>
        <label>Destination Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankBIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank BIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankCity__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankIBANNumber__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankIBANNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank IBAN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankName__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankStreet__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankZipPostalCode__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__BankZipPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffbf__BillingZipPostCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountName__c</fullName>
        <label>Destination Bank Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__PaymentCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <formula>ffbf__AccountTest__r.ffbf__PaymentCountryISO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Country ISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentId__c</fullName>
        <formula>ffbf__PaymentMediaControlTest__r.ffbf__Payment__r.Id</formula>
        <label>Payment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentMediaControlTest__c</fullName>
        <label>Payment Media Control Test</label>
        <referenceTo>ffbf__PaymentMediaControlTest__c</referenceTo>
        <relationshipLabel>Payment Media Summary Tests</relationshipLabel>
        <relationshipName>PaymentMediaSummaryTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <formula>TEXT(ffbf__AccountTest__r.ffbf__PaymentPriority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <formula>TEXT(ffbf__AccountTest__r.ffbf__PaymentRoutingMethod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Routing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment Media Summary Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Media Summary Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>